--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
             welcome to aws devops
         </h1>
     </header>
+    <footer>
+        Thanks for visiting
+    </footer>
 </body>
 </html>
